# bi-agent

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  test_subgraph.py  test_viz_custom.py  接口文档.md
app/agents/: modeling_agent.py  modeling_custom_agent.py  viz_agent.py  viz_custom_agent.py
app/core/: agent_states.py  config.py  prompts_config.py  state.py
app/core/modeling_custom_subgraph/: modeling_custom_claude_guide.md  schemas.py  state.py  task.py
app/core/subgraph/: state.py
app/core/viz_custom_subgraph/: schemas.py  state.py
app/graph/: modeling_custom_workflow.py  viz_custom_workflow.py  workflow.py
app/helpers/: modeling_helpers.py
app/nodes/: auto_etl.py  fetch_artifacts.py  modeling.py  profiler.py  router.py  summary.py  viz.py  viz_execution.py
app/nodes/modeling_custom_subgraph/: aggregator.py  executor.py  finalizer.py  observer.py  planner.py  replanner.py  tool.py
app/nodes/subgraph/: executor.py  finalizer.py  planner.py  reflector.py
app/nodes/viz_custom_subgraph/: aggregator.py  executor.py  planner.py
app/prompts/: auto_etl_prompt.py  profiler_prompt.py  router_prompt.py
app/prompts/scenarios/: modeling_anomaly.yaml  modeling_association.yaml  modeling_classification.yaml  modeling_clustering.yaml  modeling_custom.yaml  modeling_custom.yaml.backup  modeling_custom_old.yaml.backup  modeling_decomposition.yaml  modeling_forecast.yaml  summary_anomaly.yaml  summary_association.yaml  viz_anomaly.yaml  (+11 more)
app/tools/: local_kernel_runtime.py  python_interpreter.py  python_script_runner.py  sandbox.py  viz_execution_tool.py
app/utils/: alias_generator.py  clean_log_content.py  csv_reader.py  extract_text_from_content.py  file_parser.py  llm_factory.py  terminal_logger.py
bi-template/: ppio.Dockerfile  ppio.toml
bi-template/sandbox_sdk/: setup.py
temp/: analysis_artifacts.json  processed_data.feather  temp_data.csv  viz_data.json
(+542 files in other folders)
