[project]
name = "bi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.2.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.6",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "ppio-sandbox>=1.0.4",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "python-calamine>=0.6.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "xlrd>=2.0.2",
]
